add business entities models and controllers, refactor errors
